--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
+        <repository>
+            <id>spring-libs-snapshot</id>
+            <name>Spring Snapshot Repository</name>
+            <url>https://repo.spring.io/libs-snapshot</url>
+        </repository>
     </repositories>
 
     <dependencies>
