--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 server.port=8086
 spring.main.allow-bean-definition-overriding=true
-spring.application.name=school-service-es
+spring.application.name=e-school-service-es
 #logging.level.org.springframework=INFO
 #logging.level.root=INFO
 #logging.file=logs/class.log
