change es impl -> high level rest client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 # ElasticSearch配置
-spring.date.elasticsearch.cluster-node=127.0.0.1:9300
-#spring.rest.elasticsearch.uri=http://localhost:9200
+spring.rest.elasticsearch.uris=127.0.0.1:9300
+spring.rest.elasticsearch.uri=http://localhost:9200
