update: add jpa & high level client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 # ElasticSearch配置
-spring.rest.elasticsearch.uris=127.0.0.1:9300
-spring.rest.elasticsearch.uri=http://localhost:9200
+elasticSearch.host=localhost:9200
+elasticSearch.client.username=
+elasticSearch.client.password=
